main page change

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ The above copyright notice and this permission notice shall be included in all c
     <div class="container">
       <div class="motto text-center">
         <h1>Framework.sh</h1>
-        <h3>Designing and Implementing Great Solutions </h3>      
+        <h3>Designing and Implementing Efficient Turnkey Solutions </h3>      
       </div>
     </div>
   </div>
