--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@ The above copyright notice and this permission notice shall be included in all c
       <div class="container">
         <h2 class="title">Let's talk about us</h2>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
-                  <img src="assets/img/faces/clem-onojeghuo-3.jpg" alt="...">
+                  <img src="assets/img/default-avatar.png" alt="...">
                 </a>
               </div>
               <div class="card-body">
                 <a href="#paper-kit">
                   <div class="author">
-                    <h4 class="card-title">Henry Ford</h4>
-                    <h6 class="card-category">Product Manager</h6>
+                    <h4 class="card-title">Charles</h4>
+                    <h6 class="card-category">Financial Manager</h6>
                   </div>
                 </a>
                 <p class="card-description text-center">
@@ -169,22 +169,22 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
-                  <img src="assets/img/faces/joe-gardner-2.jpg" alt="...">
+                  <img src="assets/img/default-avatar.png" alt="...">
                 </a>
               </div>
               <div class="card-body">
                 <a href="#paper-kit">
                   <div class="author">
-                    <h4 class="card-title">Sophie West</h4>
-                    <h6 class="card-category">Designer</h6>
+                    <h4 class="card-title">Barry</h4>
+                    <h6 class="card-category">Operations</h6>
                   </div>
                 </a>
                 <p class="card-description text-center">
-                  A group becomes a team when each member is sure enough of himself and his contribution to praise the skill of the others. No one can whistle a symphony. It takes an orchestra to play it.
+                  Teamwork is so important that it is virtually impossible for you to reach the heights of your capabilities or make the money that you want without becoming very good at it.
                 </p>
               </div>
               <div class="card-footer text-center">
@@ -194,22 +194,22 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
-                  <img src="assets/img/faces/erik-lucatero-2.jpg" alt="...">
+                  <img src="assets/img/default-avatar.png" alt="...">
                 </a>
               </div>
               <div class="card-body">
                 <a href="#paper-kit">
                   <div class="author">
-                    <h4 class="card-title">Robert Orben</h4>
-                    <h6 class="card-category">Developer</h6>
+                    <h4 class="card-title">Gerhard</h4>
+                    <h6 class="card-category">Operations</h6>
                   </div>
                 </a>
                 <p class="card-description text-center">
-                  The strength of the team is each individual member. The strength of each member is the team. If you can laugh together, you can work together, silence isn’t golden, it’s deadly.
+                  Teamwork is so important that it is virtually impossible for you to reach the heights of your capabilities or make the money that you want without becoming very good at it.
                 </p>
               </div>
               <div class="card-footer text-center">
@@ -219,6 +219,31 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="card card-profile card-plain">
+              <div class="card-avatar">
+                <a href="#avatar">
+                  <img src="assets/img/default-avatar.png" alt="...">
+                </a>
+              </div>
+              <div class="card-body">
+                <a href="#paper-kit">
+                  <div class="author">
+                    <h4 class="card-title">Lee</h4>
+                    <h6 class="card-category">Admin</h6>
+                  </div>
+                </a>
+                <p class="card-description text-center">
+                  Teamwork is so important that it is virtually impossible for you to reach the heights of your capabilities or make the money that you want without becoming very good at it.
+                </p>
+              </div>
+              <div class="card-footer text-center">
+                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-twitter"></i></a>
+                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-google-plus"></i></a>
+                <a href="#pablo" class="btn btn-link btn-just-icon btn-neutral"><i class="fa fa-linkedin"></i></a>
+              </div>
+            </div>
+          </div>         
         </div>
       </div>
     </div>
