--- a/terms.html
+++ b/terms.html
@@ -88,8 +88,8 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="row justify-content-center d-flex align-items-center">
               <p>Latest Version on February 6th 2021<br><br>
                 This Agreement is entered into between:<br>
-                • the Framework.sh Corporation, <strong>Specify Adress</strong>,<br>
-                Canada H3A 1K2, a corporation incorporated under the laws of Canada, hereinafter called
+                • the Framework.sh Corporation, 2035 Sunset Lake road, Suite B-2, Newark, DE1972, USA,<br>
+                a corporation incorporated under the laws of Canada, hereinafter called
                 “Framework.sh,”<br>
                 • and any person or corporation, individual or professional, private or public, wishing to receive one
                 or more
@@ -684,7 +684,7 @@ The above copyright notice and this permission notice shall be included in all c
                 All notices, communications, and demands provided under the General Terms and Conditions shall be deemed
                 to
                 have been validly delivered if they are sent by registered mail, return receipt requested, to:<br>
-                • in the case of Framwork.sh: Framework.sh., <strong>Specify Adress</strong>;<br>
+                • in the case of Framwork.sh: Framework.sh., 2035 Sunset Lake road, Suite B-2, Newark, DE1972, USA;<br>
                 • in the case of the Customer: at the mailing and/or e-mail address provided to Framwork.sh.
                 <br>
                 <strong>13.5</strong> Advertising and Promotion<br>
@@ -704,7 +704,7 @@ The above copyright notice and this permission notice shall be included in all c
                 The Parties hereby agree that all judicial proceedings instituted shall be filed with and heard by the
                 courts
                 having
-                jurisdiction in the judicial district of <strong>Specify Adress</strong> where the Parties elect their
+                jurisdiction in the judicial district of 2035 Sunset Lake road, Suite B-2, Newark, DE1972, USA, where the Parties elect their
                 current
                 domicile.
               </p>
