added logos etc

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@ The above copyright notice and this permission notice shall be included in all c
     <div class="container">
       <div class="navbar-translate">
         <a class="navbar-brand" href="#top" rel="tooltip" data-placement="bottom">
-          Framework.sh
+          <img src="assets/img/primary_logo.png" style="height: 40px;padding-right: 10px;" id="terminal-logo">
         </a>
+        
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar bar1"></span>
           <span class="navbar-toggler-bar bar2"></span>
