--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ The above copyright notice and this permission notice shall be included in all c
             <h2 class="title">Let's talk product</h2>
             <h5 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
             <br>
-            <a href="#paper-kit" class="btn btn-info btn-round">See Details</a>
+           
           </div>
         </div>
         <br/>
@@ -93,12 +93,12 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-3">
             <div class="info">
               <div class="icon icon-info">
-                <i class="nc-icon nc-album-2"></i>
+                <img src="assets/img/Maint Calc.png"  style="height: 100px;padding-right: 10px;" id="maintcalc">
               </div>
               <div class="description">
-                <h4 class="info-title">Beautiful Gallery</h4>
-                <p class="description">Spend your time generating new ideas. You don't have to think of implementing.</p>
-                <a href="javascript:;" class="btn btn-link btn-info">See more</a>
+                <h4 class="info-title">Maintenace Calculator</h4>
+                <p class="description">A Maintenace calculator we built to help mediation compute maintance plans in divorce cases</p>
+                <a href="https://youtu.be/UN5t_4FHX2g" class="btn btn-link btn-info">See more</a>
               </div>
             </div>
           </div>
@@ -174,7 +174,7 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
-                  <img src="assets/img/default-avatar.png" alt="...">
+                  <img src="assets/img/barry.jpg" alt="...">
                 </a>
               </div>
               <div class="card-body">
