main page changes

--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@ The above copyright notice and this permission notice shall be included in all c
         <div class="row" id="about_Us">
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title">Let's talk product</h2>
-            <h5 class="description">This is the paragraph where you can write more details about your product. Keep you
-              user engaged by providing meaningful information. Remember that by this time, the user is curious,
-              otherwise he wouldn't scroll to get here. Add a button if you want the user to see more.</h5>
+            <h5 class="description">Our proprietary platform manages computation between different geographical centres, coordinating data sources and services. Our team is there to take care of design, business analysis, development, UI and even your marketing strategy, SEO and launch.</h5>
             <br>
 
           </div>
@@ -102,7 +100,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <h4 class="info-title">Maintenace Calculator</h4>
                 <p class="description">A Maintenace calculator we built to help mediation compute maintance plans in
                   divorce cases</p>
-                <a href="https://youtu.be/UN5t_4FHX2g" class="btn btn-link btn-info">See more</a>
+                <a href="https://youtu.be/UN5t_4FHX2g" target="_blank" class="btn btn-link btn-info">See more</a>
               </div>
             </div>
           </div>
@@ -147,9 +145,9 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
     <div class="section section-dark text-center">
       <div class="container">
-        <h2 class="title">Let's talk about us</h2>
-        <div class="row">
-          <div class="col-md-3">
+        <h2 class="title">Put some faces to the names</h2>
+        <div class="row" style="justify-content: center;">
+          <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
@@ -166,7 +164,7 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
@@ -183,7 +181,7 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
@@ -200,7 +198,7 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
@@ -216,7 +214,8 @@ The above copyright notice and this permission notice shall be included in all c
                 </a>
               </div>
             </div>
-          <div class="col-md-3">
+          </div>
+          <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
                 <a href="#avatar">
