header change and pictures added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
   </nav>
   <!-- End Navbar -->
-  <div class="page-header" data-parallax="true" style="background-image: url('assets/img/daniel-olahh.jpg');">
+  <div class="page-header" data-parallax="true" style="background-image: url('assets/img/header.jpg');">
     <div class="filter"></div>
     <div class="container">
       <div class="motto text-center">
@@ -85,7 +85,7 @@ The above copyright notice and this permission notice shall be included in all c
             <h2 class="title">Let's talk product</h2>
             <h5 class="description">Our proprietary platform manages computation between different geographical centres, coordinating data sources and services. Our team is there to take care of design, business analysis, development, UI and even your marketing strategy, SEO and launch.</h5>
             <br>
-
+            <h5 class="description"> Framework.sh's turnkey solutions frees you up to do what you're good at: Focussing on your business.</h5> 
           </div>
         </div>
         <br />
@@ -150,9 +150,7 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
-                <a href="#avatar">
-                  <img src="assets/img/default-avatar.png" alt="...">
-                </a>
+                  <img src="assets/img/Charles.jpg" alt="Charles Finance">
               </div>
               <div class="card-body">
                 <a href="#paper-kit">
@@ -166,13 +164,11 @@ The above copyright notice and this permission notice shall be included in all c
           </div>
           <div class="col-md-2">
             <div class="card card-profile card-plain">
-              <div class="card-avatar">
-                <a href="#avatar">
+              <div class="card-avatar">          
                   <img src="assets/img/barry.jpg" alt="...">
-                </a>
               </div>
               <div class="card-body">
-                <a href="#paper-kit">
+                <a href="#paper-kit"></a>
                   <div class="author">
                     <h4 class="card-title">Barry</h4>
                     <h6 class="card-category">New Business</h6>
@@ -184,9 +180,7 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
-                <a href="#avatar">
-                  <img src="assets/img/default-avatar.png" alt="...">
-                </a>
+                  <img src="assets/img/default-avatar.png" alt="...">               
               </div>
               <div class="card-body">
                 <a href="#paper-kit">
@@ -200,10 +194,8 @@ The above copyright notice and this permission notice shall be included in all c
           </div>
           <div class="col-md-2">
             <div class="card card-profile card-plain">
-              <div class="card-avatar">
-                <a href="#avatar">
-                  <img src="assets/img/default-avatar.png" alt="...">
-                </a>
+              <div class="card-avatar">             
+                  <img src="assets/img/Monica.jpg" alt="...">              
               </div>
               <div class="card-body">
                 <a href="#paper-kit">
@@ -218,9 +210,8 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-2">
             <div class="card card-profile card-plain">
               <div class="card-avatar">
-                <a href="#avatar">
-                  <img src="assets/img/default-avatar.png" alt="...">
-                </a>
+               
+                  <img src="assets/img/default-avatar.png" alt="...">              
               </div>
               <div class="card-body">
                 <a href="#paper-kit">
