projects we worked on

--- a/index.html
+++ b/index.html
@@ -90,33 +90,35 @@ The above copyright notice and this permission notice shall be included in all c
         </div>
         <br />
         <br />
+        <h3 class="title"> Some of the projects we've worked on
+        </h3>
         <div class="row">
-          <div class="col-md-3">
+         
+          <div class="col-md-4">
             <div class="info">
               <div class="icon icon-info">
                 <img src="assets/img/Maint Calc.png" style="height: 100px;padding-right: 10px;" id="maintcalc">
               </div>
               <div class="description">
-                <h4 class="info-title">Maintenace Calculator</h4>
-                <p class="description">A Maintenace calculator we built to help mediation compute maintance plans in
-                  divorce cases</p>
+                <h4 class="info-title">Alimony Calculator</h4>
+                <p class="description">A mobile-friendly tool that takes the math out of complex legal calculations and outputs court-ready reports.</p>
                 <a href="https://youtu.be/UN5t_4FHX2g" target="_blank" class="btn btn-link btn-info">See more</a>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info">
               <div class="icon icon-info">
-                <i class="nc-icon nc-bulb-63"></i>
+                <img src="assets/img/socialtraining.png" style="height: 100px;padding-right: 10px;" id="maintcalc">
               </div>
               <div class="description">
-                <h4 class="info-title">New Ideas</h4>
-                <p>Larger, yet dramatically thinner. More powerful, but remarkably power efficient.</p>
+                <h4 class="info-title">eLearning Platform</h4>
+                <p>Content delivery and learner management, connecting rural learners to the digital economy.</p>
                 <a href="javascript:;" class="btn btn-link btn-info">See more</a>
               </div>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="info">
               <div class="icon icon-info">
                 <i class="nc-icon nc-chart-bar-32"></i>
@@ -128,18 +130,7 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="info">
-              <div class="icon icon-info">
-                <i class="nc-icon nc-sun-fog-29"></i>
-              </div>
-              <div class="description">
-                <h4 class="info-title">Delightful design</h4>
-                <p>Find unique and handmade delightful designs related items directly from our sellers.</p>
-                <a href="javascript:;" class="btn btn-link btn-info">See more</a>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
