contact us changes

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-4">
             <div class="info">
               <div class="icon icon-info">
-                <img src="assets/img/socialtraining.png" style="height: 100px;padding-right: 10px;" id="maintcalc">
+                <img src="assets/img/socialtraining.png" style="height: 100px;padding-right: 10px;" id="socailtraining">
               </div>
               <div class="description">
                 <h4 class="info-title">eLearning Platform</h4>
@@ -121,7 +121,7 @@ The above copyright notice and this permission notice shall be included in all c
           <div class="col-md-4">
             <div class="info">
               <div class="icon icon-info">
-                <i class="nc-icon nc-chart-bar-32"></i>
+                <img src="assets/img/code.png" style="height: 100px;padding-right: 10px;" id="maintcalc">
               </div>
               <div class="description">
                 <h4 class="info-title">Custom Dev Platform</h4>
@@ -248,7 +248,7 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
               </div>
               <label>Message</label>
-              <textarea class="form-control" rows="4" placeholder="Tell us your thoughts and feelings..."></textarea>
+              <textarea class="form-control" rows="4" placeholder="Tell us how we can help you get your project started"></textarea>
               <div class="row">
                 <div class="col-md-4 ml-auto mr-auto">
                   <button class="btn btn-info btn-lg btn-fill">Send Message</button>
