layout changes to terms

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
     <div class="section section-dark text-center">
       <div class="container">
-        <h2 class="title">Put some faces to the names</h2>
+        <h2 class="title">The Team</h2>
         <div class="row" style="justify-content: center;">
           <div class="col-md-2">
             <div class="card card-profile card-plain">
