--- a/terms.html
+++ b/terms.html
@@ -136,9 +136,7 @@ The above copyright notice and this permission notice shall be included in all c
                 entered into by the
                 Customer.<br>
                 <strong>Technical Support:</strong> Department in charge of advising the Customer regarding the
-                installation and
-                use of the
-                Service by supplying the required documentation.<br>
+                installation and use of the Service by supplying the required documentation.<br><br>
               </p>
               <h5>SECTION 1: PURPOSE</h5>
               <p><br>
@@ -158,13 +156,13 @@ The above copyright notice and this permission notice shall be included in all c
                 from the
                 Framwork.sh Corporation.
                 The Framwork.sh services offered gratuitously are also governed by these General Terms and Conditions of
-                Service.
+                Service.<br><br>
               </p>
               <h5>SECTION 2: Framework.sh’S OBLIGATIONS </h5>
               <p><br>
                 Framwork.sh agrees to use all due care and due dispatch to provide a quality Service in compliance with
                 professional
-                standards and the state of the art. Framwork.sh only has an obligation of means.
+                standards and the state of the art. Framwork.sh only has an obligation of means.<br><br>
               </p>
               <h5>SECTION 3: Framework.sh’S LIABILITY</h5>
               <p><br>
@@ -241,7 +239,7 @@ The above copyright notice and this permission notice shall be included in all c
                 steps in order to back up his/its data in the event of a loss or deterioration of such data for any
                 reason
                 whatsoever,
-                including reasons not explicitly mentioned hereunder.<br>
+                including reasons not explicitly mentioned hereunder.<br><br>
               </p>
               <h5>SECTION 4: CUSTOMER’S OBLIGATIONS AND LIABILITIES</h5>
               <p><br>
@@ -324,7 +322,7 @@ The above copyright notice and this permission notice shall be included in all c
                 48 or
                 72 hours depending on the nature of the case) to provide its comments and intentions. Failure to respond
                 could
-                result in the suspension / termination of service.
+                result in the suspension / termination of service.<br><br>
               </p>
               <h5>SECTION 5: TECHNICAL SUPPORT</h5>
               <p><br>
@@ -439,7 +437,7 @@ The above copyright notice and this permission notice shall be included in all c
                 the
                 Service, all sums due relating to this Service, including technical support, will be invoiced.<br>
                 No new interventions will be carried out if the payment of the preceding intervention has not been
-                honoured.
+                honoured.<br><br>
               </p>
               <h5>SECTION 6: TERM AND RENEWAL OF SERVICE, RATES</h5>
               <p><br>
@@ -519,7 +517,7 @@ The above copyright notice and this permission notice shall be included in all c
                 Ireland.<br>
                 Any disagreement concerning invoicing or the nature of the Services must be forwarded to Customer
                 Service via the Customer's management Interface, within one month of the order confirmation being
-                issued.<br>
+                issued.<br><br>
               </p>
               <h5>SECTION 7: TERMINATION, LIMITATION AND SUSPENSION OF SERVICE</h5>
               <p><br>
@@ -571,7 +569,7 @@ The above copyright notice and this permission notice shall be included in all c
                 Framwork.sh reserves the right to interrupt the Service, as needed, for technical interventions designed
                 to
                 improve its
-                operations, or for maintenance procedures.
+                operations, or for maintenance procedures.<br><br>
               </p>
               <h5>SECTION 8: OPERATING CONDITIONS</h5>
               <p><br>
@@ -587,7 +585,7 @@ The above copyright notice and this permission notice shall be included in all c
                 authority,
                 in
                 compliance with the appropriate applicable laws, or from a third party;<br>
-                • if the contact information in the Customer’s account seems to be false, inaccurate or out of date.<br>
+                • if the contact information in the Customer’s account seems to be false, inaccurate or out of date.<br><br>
               </p>
               <h5>SECTION 9: CUSTOMER INFORMATION AND COMPLIANCE WITH SERVICE</h5>
               <p><br>
@@ -595,7 +593,7 @@ The above copyright notice and this permission notice shall be included in all c
                 his/its needs
                 and has received from Framwork.sh all the information and advice needed to knowingly enter into this
                 agreement.<br>
-                Framwork.sh reserves the right to monitor compliance with the Service’s terms of use.<br>
+                Framwork.sh reserves the right to monitor compliance with the Service’s terms of use.<br><br>
               </p>
               <h5>SECTION 10: TOLERANCE</h5>
               <p><br>
@@ -604,7 +602,7 @@ The above copyright notice and this permission notice shall be included in all c
                 violation
                 by the other Party of any of the obligations hereunder shall not be construed as a waiver to invoke in
                 the future
-                any of these Terms and Conditions.
+                any of these Terms and Conditions.<br><br>
               </p>
               <h5>SECTION 11: PERSONAL DATA</h5>
               <p><br>
@@ -632,7 +630,7 @@ The above copyright notice and this permission notice shall be included in all c
                 in strict compliance with the Customer’s privacy rights.<br>
                 The Customer also acknowledges that Framwork.sh may communicate the Customer’s information at the
                 request of
-                administrative, regulatory or judicial authorities.<br>
+                administrative, regulatory or judicial authorities.<br><br>
               </p>
               <h5>SECTION 12: AMENDMENTS</h5>
               <p><br>
@@ -647,7 +645,7 @@ The above copyright notice and this permission notice shall be included in all c
                 e-mail to
                 the Customer. Notwithstanding the provisions of section 7, the Customer shall then have the right to
                 terminate the
-                Agreement within thirty (30) days of the effective date of such amendments.<br>
+                Agreement within thirty (30) days of the effective date of such amendments.<br><br>
               </p>
               <h5>SECTION 13: GENERAL PROVISIONS</h5>
               <p><br>
@@ -692,7 +690,7 @@ The above copyright notice and this permission notice shall be included in all c
                 publications
                 within the professional markets, indicate the services provided to the Customer, on its commercial
                 documents
-                and/or in its annual report.<br>
+                and/or in its annual report.<br><br>
               </p>
               <h5>SECTION 14: APPLICABLE LAWS AND JURISDICTION</h5>
               <p><br>
