--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
     </div>
   </div>
-  <div class="main">
+  <div class="main"id="about_Us">
     <div class="section text-center">
       <div class="container">
-        <div class="row" id="about_Us">
+        <div class="row" >
           <div class="col-md-8 ml-auto mr-auto">
             <h2 class="title">Let's talk product</h2>
             <h5 class="description">Our proprietary platform manages computation between different geographical centres, coordinating data sources and services. Our team is there to take care of design, business analysis, development, UI and even your marketing strategy, SEO and launch.</h5>
@@ -227,11 +227,11 @@ The above copyright notice and this permission notice shall be included in all c
         </div>
       </div>
     </div>
-    <div class="section landing-section">
+    <div class="section landing-section" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            <h2 class="text-center" id="contact">Keep in touch?</h2>
+            <h2 class="text-center" >Keep in touch?</h2>
             <form class="contact-form">
               <div class="row">
                 <div class="col-md-6">
