--- a/terms.html
+++ b/terms.html
@@ -57,7 +57,7 @@ The above copyright notice and this permission notice shall be included in all c
             <a href="index.html" class="nav-link"><i class="nc-icon nc-layout-11"></i>What We do</a>
           </li>
           <li class="nav-item">
-            <a href="index.html#contact" target="_blank" class="nav-link"><i class="nc-icon nc-book-bookmark"></i>Contact Us</a>
+            <a href="index.html#contact" class="nav-link"><i class="nc-icon nc-book-bookmark"></i>Contact Us</a>
           </li>
           
         
