--- a/terms.html
+++ b/terms.html
@@ -54,10 +54,10 @@ The above copyright notice and this permission notice shall be included in all c
       <div class="collapse navbar-collapse justify-content-end" id="navigation">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="index.html" class="nav-link"><i class="nc-icon nc-layout-11"></i>What We do</a>
+            <a href="index.html" class="nav-link">What We do</a>
           </li>
           <li class="nav-item">
-            <a href="index.html#contact" class="nav-link"><i class="nc-icon nc-book-bookmark"></i>Contact Us</a>
+            <a href="index.html#contact" class="nav-link"></i>Contact Us</a>
           </li>
           
         
