--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ The above copyright notice and this permission notice shall be included in all c
             ©
             <script>
               document.write(new Date().getFullYear())
-            </script>, made with <i class="fa fa-heart heart"></i> by Creative Tim
+            </script>, made with <i class="fa fa-heart heart"></i> by Framework.sh
           </span>
         </div>
       </div>
